--- a/sass/sections/_signing.scss
+++ b/sass/sections/_signing.scss
@@ -135,7 +135,7 @@
         @media screen and (min-width: $tablet) {
             display: block;
             top: -16px;
-            right: -12px;
+            right: 0;
             width: 150.21px;
             height: 74.13px;
         }
@@ -161,9 +161,9 @@
 .signing__arrow {
     &--mob {
         top: 216px;
-        right: -70px;
+        right: 25px;
         height: 115.46px;
-        height: 115.46px;
+        width: 115.46px;
 
         @media screen and (min-width: $tablet) {
             display: none;
